# consolengine

./: CMakeLists.txt  LICENSE  README.md
demoProject/: CMakeLists.txt  main.cpp  win2.cpp  win2.h
include/: Button.h  Consolengine.h  Control.h  Slider.h  TextBlock.h  Toggle.h  ToggleGroup.h  UIObject.h  Window.h  WindowProcessResult.h
src/: Button.cpp  Consolengine.cpp  Control.cpp  Slider.cpp  TextBlock.cpp  Toggle.cpp  ToggleGroup.cpp  UIObject.cpp  Window.cpp
testProject/: win1.cpp  win1.h  win2.cpp
